# learning-ratatui

./: Cargo.toml  Readme.md
.config/: config.json5
json_editor/: Cargo.toml  readme.md
json_editor/src/: app.rs  main.rs  ui.rs
src/: action.rs  app.rs  components.rs  config.rs  error.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs  utils.rs
src/components/: fps.rs  home.rs
